--- a/Sandy-SFBikeShare/templates/index.html
+++ b/Sandy-SFBikeShare/templates/index.html
@@ -6,7 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Flask Plotlyjs Example</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+
+  <!-- Leaflet JS & CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+    crossorigin=""></script>
+
+  <!-- Canvas JS -->
+  <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
+  <!-- Marker Cluster JS & CSS -->
+  <script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.css">
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.Default.css">
 
   <!-- Google fonts -->
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
@@ -15,8 +31,40 @@
   <!-- D3.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 
+  <!-- Plotly js -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script> -->
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
   <!-- stylesheet -->
-  <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/fixed.css">
+  <!-- 
+  <style>
+
+    /* body {
+    padding: 0;
+    margin: 0;
+    }
+
+  #map,
+  body,
+  html {
+  height: 100%;
+  } */
+  
+  #map-container {
+    position: relative;
+    height: 300px;
+    width: 100%x;
+    
+  } 
+
+  #map {
+    position: relative;
+    height: inherit;
+    width: inherit;
+  }
+  </style> -->
 
   <!-- <style>
     body {
@@ -97,66 +145,238 @@
 
 <body>
 
-  <div class="container">
-    <div class="row">
+  <body data-spy="scroll" data-target="#navbarResponsive">
+
+
+    <div id="home">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#"><img src="../static/img/bike_icon.png"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#map_section">Map</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#start_section">Popular Start</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#end_section">Popular End</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#trip_section">Trip</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#weather_section">Weather</a>
+            </li>
+          </ul>
+        </div>
+
+
+      </nav>
+      <!-- End Navigation -->
+
+      <!-- Start Landing Page Section -->
+      <div class="landing">
+        <div class="home-wrap">
+          <div class="home-inner">
+
+          </div>
+        </div>
+      </div>
+
+      <div class="caption text-center">
+        <h1>Ford GoBike Dashboard</h1>
+        <h3></h3>
+
+        <a class="btn btn-outline-light btn-lg" href="#map_section">Get Started</a>
+       <br><br><br><br><br><br><br><br><br><br><br>
+        <h6>Cephra Stuart | Dustin Na | Jessie Ren | Sandy He</h6>
+      </div>
+
+    </div>
+
+
+    <!-- <div class="container">
+      <div class="row"></div>
       <div class="col-md-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
-    </div>
-    <!-- <div class="row">
-      <div class="col-md-2">
-        <div class="well">
-          <h5>SELECT Sample:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
-        </div>
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Sample MetaData</h3>
-          </div>
-          <div id="sample-metadata" class="panel-body"></div>
-        </div>
-      </div>
-      <div class="col-md-10">
-        <div id="pie"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div id="gauge"></div>
-        </div>
-      </div>
     </div> -->
 
-    <div class="row">
-      <div class="col-md-12">
-        <input type="button" class="btn btn-sm" id = "btnMV" name="Mountain View" value="Mountain View" />
-        <input type="button" class="btn btn-sm" id = "btnSF" name="San Francisco" value="San Francisco" />
-        <input type="button" class="btn btn-sm" id = "btnSJ" name="San Jose" value="San Jose" />
-        <input type="button" class="btn btn-sm" id = "btnPL" name="Palo Alto" value="Palo Alto" />
-        <input type="button" class="btn btn-sm" id = "btnRC" name="Redwood City" value="Redwood City" onclick="showGraph()"/>
-        <input type="button" class="btn btn-sm" id = "btnAll" name="San Jose" value="All" />
-      </div>
-      
-    </div>
-    <div class="row">
 
-      <div class="col-md-12">
+
+    <div id="map_section" class="offset">
+      <div class="jumbotron">
+        <div class="col-md-12 text-center">
+            <br>
+          <h3>Bike Share Station Location</h3>
+        </div>
+        <div class="col-md-12 text-center">
+          <div id="map-container">
+            <div id="map">
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-12 narrow">
+            <h3></h3>
+          </div>
+      </div>
+    </div>
+    </div>
+
+    <div id="start_section" class="offset">
+
+      <div class="col-md-12 narrow">
+        <h3></h3>
+      </div>
+
+      <div class="col-md-12 text-center">
+        <h3>Popular Start Station</h3>
+      </div>
+
+      <div class="narrow">
+        <select id="selCity" onchange="cityDataS(this.value)">
+          <option value="">Bay Area</option>
+          {% for city in cities %}
+          <option value="{{ city }}">{{ city }}</option>
+          {% endfor %}
+        </select>
+      </div>
+
+      <div class="col-md-12 narrow">
+        <div id="bar1"></div>
+      </div>
+      <div class="col-md-12 narrow">
+          <h3><br><br></h3>
+        </div>
+    </div>
+
+
+    <div id="end_section" class="offset">
+
+      <div class="col-md-12 narrow">
+        <h3></h3>
+      </div>
+
+      <div class="col-md-12 text-center">
+        <h3>Popular End Station</h3>
+      </div>
+
+      <div class="narrow">
+        <select id="selCity" onchange="cityDataE(this.value)">
+          <option value="">Bay Area</option>
+          {% for city in cities %}
+          <option value="{{ city }}">{{ city }}</option>
+          {% endfor %}
+        </select>
+      </div>
+
+      <div class="col-md-12 narrow">
+        <div id="bar2"></div>
+      </div>
+      <div class="col-md-12 narrow">
+          <h3><br><br><br></h3>
+        </div>
+
+    </div>
+
+
+    <div id="trip_section" class="offset">
+      <div class="jumbotron">
+       
+
+        <div class="col-md-12 text-center">
+            <h3>Average Trip Time</h3>
+          </div>
+
+      <div class="col-md-12 text-center">
+        <input type="button" class="btn btn-sm" id="btnMV" name="Mountain View" value="Mountain View" />
+        <input type="button" class="btn btn-sm" id="btnSF" name="San Francisco" value="San Francisco" />
+        <input type="button" class="btn btn-sm" id="btnSJ" name="San Jose" value="San Jose" />
+        <input type="button" class="btn btn-sm" id="btnPL" name="Palo Alto" value="Palo Alto" />
+        <input type="button" class="btn btn-sm" id="btnRC" name="Redwood City" value="Redwood City" onclick="showGraph()" />
+        <input type="button" class="btn btn-sm" id="btnAll" name="San Jose" value="All" />
         <div id="bubble"></div>
       </div>
-
+    </div>
     </div>
 
 
 
+    <div id="weather_section" class="offset">
 
-    <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script> -->
-    <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
-    <!-- <script src="{{ url_for('static', filename='js/bonus.js') }}"></script> -->
-    <!-- <script src="/static/js/app.js"></script> -->
+        <div class="col-md-12 narrow">
+            <h3></h3>
+          </div>
+    
+          <div class="col-md-12 text-center">
+            <h3>Weather</h3>
+          </div>
+    
+
+      <div class="col-md-12 narrow">
+        <div id="tabs" style="height: 100px">
+
+            <div class="col-md-12 text-center">
+          <ul>
+            <li><a href="#tabs-1" style="font-size: 14px">Average</a></li>
+            <li><a href="#tabs-2" style="font-size: 14px">Maximum</a></li>
+            <li><a href="#tabs-3" style="font-size: 14px">Minimum</a></li>
+          </ul>
+            </div>
+
+
+          <div id="tabs-1" style="height: 300px">
+            <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+          </div>
+          <div id="tabs-2" style="height: 300px">
+            <div id="chartContainer2" style="height: 300px; width: 100%;"></div>
+          </div>
+          <div id="tabs-3" style="height: 300px">
+            <div id="chartContainer3" style="height: 300px; width: 100%;"></div>
+          </div>
+        </div>
+
+        <div class="col-md-12 narrow">
+            <h3></h3>
+          </div>
+    
+
+
+      </div>
+
+    </div>
+
+    <!-- end of body -->
+    </div>
+
+
     <script src="../static/js/radarChart.js"></script>
     <script src="../static/js/showGraph.js"></script>
 
+
+    <!-- Map -->
+    <!-- <script type="text/javascript" src="../static/config.js"></script>
+    <script type="text/javascript" src="../static/logic.js"></script> -->
+
+    <script src="https://canvasjs.com/assets/script/jquery-ui.1.11.2.min.js"></script>
+    <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
+
+    <script src="../static/js/config.js"></script>
+    <script src="../static/js/logic.js"></script>
+    <script src="../static/js/app.js"></script>
+    <script src="../static/js/test.js"></script>
+
+  </body>
 </body>
 
 </html>
