--- a/Sandy-SFBikeShare/templates/index.html
+++ b/Sandy-SFBikeShare/templates/index.html
@@ -38,117 +38,17 @@
   <!-- stylesheet -->
   <link rel="stylesheet" type="text/css" href="../static/css/style.css">
   <link rel="stylesheet" type="text/css" href="../static/css/fixed.css">
-  <!-- 
-  <style>
 
-    /* body {
-    padding: 0;
-    margin: 0;
-    }
-
-  #map,
-  body,
-  html {
-  height: 100%;
-  } */
-  
-  #map-container {
-    position: relative;
-    height: 300px;
-    width: 100%x;
-    
-  } 
-
-  #map {
-    position: relative;
-    height: inherit;
-    width: inherit;
-  }
-  </style> -->
-
-  <!-- <style>
-    body {
-      font-family: 'Open Sans', sans-serif;
-      font-size: 10px;
-      font-weight: 300;
-      fill: #242424;
-      text-align: center;
-      text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
-      cursor: default;
-    }
-
-    .btn {
-      background-color: white;
-      color: #B8B7B7;
-      border: 2px solid #d1d1e0; /* Green */
-    }
-
-    .btn:hover {
-      background-color: #d1d1e0; /* Green */
-      color: white;
-    }
-
-    .legend {
-      font-family: 'Raleway', sans-serif;
-      fill: #333333;
-    }
-
-    /* .toolTip {
-      pointer-events: none;
-      position: absolute;
-      display: none;
-      min-width: 50px;
-      height: auto;
-      background: none repeat scroll 0 0 #ffffff;
-      padding: 9px 14px 6px 14px;
-      border-radius: 2px;
-      text-align: center;
-      line-height: 1.3;
-      color: #5B6770;
-      box-shadow: 0px 3px 9px rgba(0, 0, 0, .15);
-    } */
-
-    div.tooltip {   
-  position: absolute;           
-  text-align: center;           
-  width: 70px;                  
-  height: 70px;                 
-  padding: 7px 0;           
-  font: 9px sans-serif;        
-  background: white;   
-  border: 1px;
-  border-color: gray; 
-  border-bottom: 1px dotted black;     
-  border-radius: 6px;           
-  pointer-events: auto;         
-}
-
-    .toolTip:after {
-      content: "";
-      width: 0;
-      height: 0;
-      border-left: 12px solid transparent;
-      border-right: 12px solid transparent;
-      border-top: 12px solid white;
-      position: absolute;
-      bottom: -10px;
-      left: 50%;
-      margin-left: -12px;
-    }
-
-    .toolTip span {
-      font-weight: 500;
-      color: #081F2C;
-    }
-  </style> -->
 </head>
 
 <body>
 
   <body data-spy="scroll" data-target="#navbarResponsive">
 
-
+<!-- Homepage -->
     <div id="home">
+
+      <!-- Navigation Bar -->
       <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#"><img src="../static/img/bike_icon.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -196,27 +96,18 @@
         <h3></h3>
 
         <a class="btn btn-outline-light btn-lg" href="#map_section">Get Started</a>
-       <br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br>
         <h6>Cephra Stuart | Dustin Na | Jessie Ren | Sandy He</h6>
       </div>
 
     </div>
 
 
-    <!-- <div class="container">
-      <div class="row"></div>
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
-      </div>
-    </div> -->
-
-
-
+<!-- Map Page -->
     <div id="map_section" class="offset">
       <div class="jumbotron">
         <div class="col-md-12 text-center">
-            <br>
+          <br>
           <h3>Bike Share Station Location</h3>
         </div>
         <div class="col-md-12 text-center">
@@ -227,8 +118,8 @@
         </div>
 
         <div class="col-md-12 narrow">
-            <h3></h3>
-          </div>
+          <h3></h3>
+        </div>
       </div>
     </div>
     </div>
@@ -239,6 +130,7 @@
         <h3></h3>
       </div>
 
+      <!-- Popular Start Station -->
       <div class="col-md-12 text-center">
         <h3>Popular Start Station</h3>
       </div>
@@ -256,8 +148,8 @@
         <div id="bar1"></div>
       </div>
       <div class="col-md-12 narrow">
-          <h3><br><br></h3>
-        </div>
+        <h3><br><br></h3>
+      </div>
     </div>
 
 
@@ -266,7 +158,7 @@
       <div class="col-md-12 narrow">
         <h3></h3>
       </div>
-
+<!-- Popular End Station      -->
       <div class="col-md-12 text-center">
         <h3>Popular End Station</h3>
       </div>
@@ -284,55 +176,56 @@
         <div id="bar2"></div>
       </div>
       <div class="col-md-12 narrow">
-          <h3><br><br><br></h3>
-        </div>
+        <h3><br><br><br></h3>
+      </div>
 
     </div>
 
 
     <div id="trip_section" class="offset">
       <div class="jumbotron">
-       
+
+<!-- Average Trip Time -->
+        <div class="col-md-12 text-center">
+          <h3>Average Trip Time</h3>
+        </div>
 
         <div class="col-md-12 text-center">
-            <h3>Average Trip Time</h3>
-          </div>
-
-      <div class="col-md-12 text-center">
-        <input type="button" class="btn btn-sm" id="btnMV" name="Mountain View" value="Mountain View" />
-        <input type="button" class="btn btn-sm" id="btnSF" name="San Francisco" value="San Francisco" />
-        <input type="button" class="btn btn-sm" id="btnSJ" name="San Jose" value="San Jose" />
-        <input type="button" class="btn btn-sm" id="btnPL" name="Palo Alto" value="Palo Alto" />
-        <input type="button" class="btn btn-sm" id="btnRC" name="Redwood City" value="Redwood City" onclick="showGraph()" />
-        <input type="button" class="btn btn-sm" id="btnAll" name="San Jose" value="All" />
-        <div id="bubble"></div>
+          <input type="button" class="btn btn-sm" id="btnMV" name="Mountain View" value="Mountain View" />
+          <input type="button" class="btn btn-sm" id="btnSF" name="San Francisco" value="San Francisco" />
+          <input type="button" class="btn btn-sm" id="btnSJ" name="San Jose" value="San Jose" />
+          <input type="button" class="btn btn-sm" id="btnPL" name="Palo Alto" value="Palo Alto" />
+          <input type="button" class="btn btn-sm" id="btnRC" name="Redwood City" value="Redwood City" onclick="showGraph()" />
+          <input type="button" class="btn btn-sm" id="btnAll" name="San Jose" value="All" />
+          <div id="bubble"></div>
+        </div>
       </div>
-    </div>
     </div>
 
 
 
     <div id="weather_section" class="offset">
 
-        <div class="col-md-12 narrow">
-            <h3></h3>
-          </div>
-    
-          <div class="col-md-12 text-center">
-            <h3>Weather</h3>
-          </div>
-    
+      <div class="col-md-12 narrow">
+        <h3></h3>
+      </div>
+
+      <!-- Weather Analysis -->
+      <div class="col-md-12 text-center">
+        <h3>Weather</h3>
+      </div>
+
 
       <div class="col-md-12 narrow">
         <div id="tabs" style="height: 100px">
 
-            <div class="col-md-12 text-center">
-          <ul>
-            <li><a href="#tabs-1" style="font-size: 14px">Average</a></li>
-            <li><a href="#tabs-2" style="font-size: 14px">Maximum</a></li>
-            <li><a href="#tabs-3" style="font-size: 14px">Minimum</a></li>
-          </ul>
-            </div>
+          <div class="col-md-12 text-center">
+            <ul>
+              <li><a href="#tabs-1" style="font-size: 14px">Average</a></li>
+              <li><a href="#tabs-2" style="font-size: 14px">Maximum</a></li>
+              <li><a href="#tabs-3" style="font-size: 14px">Minimum</a></li>
+            </ul>
+          </div>
 
 
           <div id="tabs-1" style="height: 300px">
@@ -347,9 +240,9 @@
         </div>
 
         <div class="col-md-12 narrow">
-            <h3></h3>
-          </div>
-    
+          <h3></h3>
+        </div>
+
 
 
       </div>
@@ -360,20 +253,25 @@
     </div>
 
 
-    <script src="../static/js/radarChart.js"></script>
-    <script src="../static/js/showGraph.js"></script>
 
 
-    <!-- Map -->
-    <!-- <script type="text/javascript" src="../static/config.js"></script>
-    <script type="text/javascript" src="../static/logic.js"></script> -->
+
 
     <script src="https://canvasjs.com/assets/script/jquery-ui.1.11.2.min.js"></script>
     <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
 
+
+    <!-- Radar Chart -->
+    <script src="../static/js/radarChart.js"></script>
+    <script src="../static/js/showGraph.js"></script>
+    <!-- Map -->
     <script src="../static/js/config.js"></script>
     <script src="../static/js/logic.js"></script>
+
+    <!-- Popular Bar Chart -->
     <script src="../static/js/app.js"></script>
+
+    <!-- Canvas SF Temperature-->
     <script src="../static/js/test.js"></script>
 
   </body>
